[package]
name = "lanyte-verify"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
description = "Runtime verification library for tool execution outcomes"
repository = "https://github.com/lanytehq/lanyte-verify"

[features]
default = []
http = ["dep:reqwest"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
thiserror = "2"

[dependencies.reqwest]
version = "0.12"
optional = true
features = ["blocking", "rustls-tls"]
default-features = false

[dev-dependencies]
tempfile = "3"
